--- a/client/style.css
+++ b/client/style.css
@@ -23,7 +23,7 @@ body {
   justify-content: space-between;
 }
 
-#chat_container {
+#chat-container {
   flex: 1;
   width: 100%;
   height: 100%;
@@ -41,7 +41,7 @@ body {
 }
 
 /* hides scrollbar */
-#chat_container::-webkit-scrollbar {
+#chat-container::-webkit-scrollbar {
   display: none;
 }
 
@@ -116,7 +116,7 @@ body {
 form {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 1rem auto 1rem auto;
   padding: 10px;
   background: #40414F;
 
@@ -127,6 +127,8 @@ form {
 
 textarea {
   width: 100%;
+  min-height: 5rem;
+  height: fit-content;
 
   color: #fff;
   font-size: 18px;
@@ -136,6 +138,7 @@ textarea {
   border-radius: 5px;
   border: none;
   outline: none;
+  resize: vertical;
 }
 
 button {
