Maded changes to theme layout, typing speed, icons

--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,4 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -65,6 +63,17 @@ body {
   gap: 10px;
 }
 
+@keyframes fade-slide-in {
+  from {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .profile {
   width: 36px;
   height: 36px;
@@ -81,9 +90,8 @@ body {
   background: #10a37f;
 }
 
-.profile img {
-  width: 60%;
-  height: 60%;
+.profile .img {
+  color: #FFF;
   object-fit: contain;
 }
 
@@ -125,20 +133,21 @@ form {
   gap: 10px;
 }
 
+label {
+  width: 100%;
+}
+
 textarea {
   width: 100%;
-  min-height: 5rem;
-  height: fit-content;
-
   color: #fff;
   font-size: 18px;
 
   padding: 10px;
   background: transparent;
-  border-radius: 5px;
   border: none;
   outline: none;
-  resize: vertical;
+  resize: none;
+  transition: 0.2s height ease-in-out;
 }
 
 button {
@@ -146,9 +155,12 @@ button {
   border: 0;
   cursor: pointer;
   background: transparent;
+  color: rgba(0, 255, 255, 1);
+  font-size: 20px;
+  margin-right: 20px;
+  transition: 0.2s transform ease-in-out;
 }
 
-form img {
-  width: 30px;
-  height: 30px;
+button:hover {
+  transform: scale(1.3);
 }
